--- a/css/style.css
+++ b/css/style.css
@@ -8011,10 +8011,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #fdbe34; }
+  color: #b72827; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #fdbe34;
+    color: #b72827;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8024,7 +8024,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .ftco-navbar-light {
-  background: #00043c !important;
+  background: #6f8ed6 !important;
   z-index: 3;
   padding: 0; }
   @media (max-width: 991.98px) {
@@ -8053,7 +8053,7 @@ h1, h2, h3, h4, h5,
       height: 100%;
       bottom: 0;
       left: 0;
-      background-color: #fdbe34;
+      background-color: #b72827;
       visibility: hidden;
       -webkit-transform: scaleX(0);
       -ms-transform: scaleX(0);
@@ -8066,7 +8066,7 @@ h1, h2, h3, h4, h5,
       color: #000000; }
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover:before {
         visibility: visible;
-        background-color: #fdbe34;
+        background-color: #b72827;
         -webkit-transform: scaleX(1);
         -ms-transform: scaleX(1);
         transform: scaleX(1); }
@@ -8102,7 +8102,7 @@ h1, h2, h3, h4, h5,
           color: rgba(255, 255, 255, 0.8); } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    background: #fdbe34;
+    background: #b72827;
     border-radius: 0px; }
     @media (max-width: 767.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
@@ -8117,13 +8117,13 @@ h1, h2, h3, h4, h5,
     color: #000000; }
     .ftco-navbar-light .navbar-nav > .nav-item.active > a:before {
       visibility: visible;
-      background-color: #fdbe34;
+      background-color: #b72827;
       -webkit-transform: scaleX(1);
       -ms-transform: scaleX(1);
       transform: scaleX(1); }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-        color: #fdbe34; }
+        color: #b72827; }
         .ftco-navbar-light .navbar-nav > .nav-item.active > a:before {
           display: none; } }
   .ftco-navbar-light .navbar-toggler {
@@ -8144,7 +8144,7 @@ h1, h2, h3, h4, h5,
   line-height: 1;
   margin-bottom: 30px; }
   .navbar-brand span {
-    color: #fdbe34; }
+    color: #b72827; }
   .navbar-brand:hover, .navbar-brand:focus {
     color: #000000; }
 
@@ -8159,8 +8159,8 @@ h1, h2, h3, h4, h5,
     .social-media p a span {
       color: #4d4d4d; }
     .social-media p a:hover {
-      background: #fdbe34;
-      border-color: #fdbe34; }
+      background: #b72827;
+      border-color: #b72827; }
       .social-media p a:hover span {
         color: #fff; }
 
@@ -8243,10 +8243,10 @@ h1, h2, h3, h4, h5,
       .hero-wrap .slider-text h1 {
         font-size: 40px; } }
     .hero-wrap .slider-text h1 span {
-      color: #fdbe34; }
+      color: #b72827; }
   .hero-wrap .slider-text .subheading {
     font-size: 15px;
-    color: #fdbe34;
+    color: #b72827;
     text-transform: uppercase;
     font-family: "Poppins", Arial, sans-serif;
     font-weight: 800;
@@ -8275,9 +8275,9 @@ h1, h2, h3, h4, h5,
       .hero-wrap .slider-text .breadcrumbs span a {
         color: rgba(255, 255, 255, 0.7); }
         .hero-wrap .slider-text .breadcrumbs span a:hover, .hero-wrap .slider-text .breadcrumbs span a:focus {
-          color: #fdbe34; }
+          color: #b72827; }
           .hero-wrap .slider-text .breadcrumbs span a:hover i, .hero-wrap .slider-text .breadcrumbs span a:focus i {
-            color: #fdbe34; }
+            color: #b72827; }
   .hero-wrap .slider-text .bread {
     font-weight: 700 !important; }
 
@@ -8365,7 +8365,7 @@ h1, h2, h3, h4, h5,
           letter-spacing: 2px;
           font-family: "Poppins", Arial, sans-serif;
           font-weight: 700;
-          color: #fdbe34;
+          color: #b72827;
           display: inline-block;
           position: relative;
           letter-spacing: 4px; }
@@ -8452,7 +8452,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #fdbe34 !important;
+      color: #b72827 !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -8518,10 +8518,10 @@ h1, h2, h3, h4, h5,
   background: #f8f9fd !important; }
 
 .bg-secondary {
-  background: #fdbe34 !important; }
+  background: #b72827 !important; }
 
 .bg-primary {
-  background: #fdbe34; }
+  background: #b72827; }
 
 .btn {
   cursor: pointer;
@@ -8534,20 +8534,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #fdbe34 !important;
-    border: 1px solid #fdbe34 !important;
+    background: #b72827 !important;
+    border: 1px solid #b72827 !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #fdbe34;
+      border: 1px solid #b72827;
       background: transparent;
-      color: #fdbe34; }
+      color: #b72827; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #fdbe34;
+      border: 1px solid #b72827;
       background: transparent;
-      color: #fdbe34; }
+      color: #b72827; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #fdbe34;
+        background: #b72827;
         color: #fff; }
   .btn.btn-outline-white {
     border-color: rgba(255, 255, 255, 0.8);
@@ -8561,7 +8561,7 @@ h1, h2, h3, h4, h5,
     .btn.btn-outline-white:hover, .btn.btn-outline-white:focus, .btn.btn-outline-white:active {
       background: #fff;
       border-color: #fff;
-      color: #fdbe34; }
+      color: #b72827; }
 
 @media (max-width: 767.98px) {
   .img-video {
@@ -8570,7 +8570,7 @@ h1, h2, h3, h4, h5,
 .icon-video {
   width: 80px;
   height: 80px;
-  background: #fdbe34;
+  background: #b72827;
   -webkit-animation: pulse 2s infinite;
   animation: pulse 2s infinite;
   -webkit-border-radius: 50%;
@@ -8602,7 +8602,7 @@ h1, h2, h3, h4, h5,
     position: relative;
     z-index: 0;
     border-radius: 50%;
-    background: #fdbe34;
+    background: #b72827;
     -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15); }
@@ -8686,18 +8686,18 @@ h1, h2, h3, h4, h5,
   .services-2:nth-child(1) {
     background: rgba(0, 0, 0, 0.05); }
   .services-2:nth-child(2) {
-    background: #fdbe34;
+    background: #b72827;
     color: #000000; }
     .services-2:nth-child(2) .icon:after {
       border-color: #fff !important; }
     .services-2:nth-child(2) .icon:before {
       background: #fff !important; }
   .services-2:nth-child(3) {
-    background: #00043c; }
+    background: #6f8ed6; }
     .services-2:nth-child(3) .icon:before {
       background: rgba(255, 255, 255, 0.1) !important; }
     .services-2:nth-child(3) .icon span {
-      color: #fdbe34 !important; }
+      color: #b72827 !important; }
     .services-2:nth-child(3) .text {
       color: rgba(255, 255, 255, 0.8); }
       .services-2:nth-child(3) .text h3 {
@@ -8710,11 +8710,11 @@ h1, h2, h3, h4, h5,
   font-weight: 600;
   border: 1px solid rgba(0, 0, 0, 0.1); }
   .tabulation-2 .nav-pills .nav-item .nav-link span {
-    color: #fdbe34; }
+    color: #b72827; }
   .tabulation-2 .nav-pills .nav-item .nav-link.active {
     color: #fff;
-    background: #fdbe34;
-    border: 1px solid #fdbe34; }
+    background: #b72827;
+    border: 1px solid #b72827; }
     .tabulation-2 .nav-pills .nav-item .nav-link.active span {
       color: #fff; }
 
@@ -8736,7 +8736,7 @@ h1, h2, h3, h4, h5,
     z-index: -1;
     opacity: 1;
     width: 50%;
-    background: #fdbe34; }
+    background: #fdf972; }
 
 .ftco-counter {
   overflow-x: hidden;
@@ -8793,7 +8793,7 @@ h1, h2, h3, h4, h5,
     right: 0;
     bottom: 0;
     content: '';
-    background: #00043c;
+    background: #6f8ed6;
     opacity: 0;
     z-index: 0;
     -moz-transition: all 0.3s ease;
@@ -8819,7 +8819,7 @@ h1, h2, h3, h4, h5,
     height: 70px;
     content: '';
     z-index: 1;
-    background: #fdbe34;
+    background: #FDF972;
     -webkit-transform: translate(50%, 50%);
     -ms-transform: translate(50%, 50%);
     transform: translate(50%, 50%);
@@ -8948,7 +8948,7 @@ h1, h2, h3, h4, h5,
       .block-2 .front .box p {
         font-size: 12px; }
   .block-2 .back {
-    background: #fdbe34;
+    background: #b72827;
     -webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.4);
     box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.4);
     -webkit-transform: rotateY(-180deg);
@@ -9036,7 +9036,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #fdbe34 !important; }
+  background: #b72827 !important; }
 
 .about-author .desc h3 {
   font-size: 24px; }
@@ -9062,7 +9062,7 @@ textarea.form-control {
   overflow: hidden;
   background: #252525; }
   .footer a {
-    color: #fdbe34; }
+    color: #b72827; }
   .footer .footer-heading {
     font-size: 18px;
     margin-bottom: 30px;
@@ -9102,7 +9102,7 @@ textarea.form-control {
         -webkit-box-shadow: none;
         box-shadow: none; }
     .footer .contact-form .submit {
-      background: #fdbe34 !important;
+      background: #b72827 !important;
       color: #000000; }
     .footer .contact-form textarea.form-control {
       height: inherit !important; }
@@ -9145,12 +9145,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #fdbe34; }
+      color: #b72827; }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #fdbe34; }
+    color: #b72827; }
 
 .ftco-media {
   background: #fff;
@@ -9174,7 +9174,7 @@ textarea.form-control {
   .ftco-media .icon {
     font-size: 50px;
     display: block;
-    color: #fdbe34; }
+    color: #b72827; }
   .ftco-media.text-center .ftco-icon {
     margin: 0 auto; }
 
@@ -9218,7 +9218,7 @@ textarea.form-control {
   display: block;
   margin-bottom: 5px;
   font-weight: 700;
-  color: #fdbe34; }
+  color: #b72827; }
 
 .heading-section h2 {
   font-size: 30px;
@@ -9246,7 +9246,7 @@ textarea.form-control {
   background-position: center center; }
 
 .aside-stretch-right {
-  background: #fdbe34; }
+  background: #b72827; }
   .aside-stretch-right:after {
     position: absolute;
     top: 0;
@@ -9254,7 +9254,7 @@ textarea.form-control {
     bottom: 0;
     content: '';
     width: 360%;
-    background: #fdbe34; }
+    background: #b72827; }
   @media (max-width: 767.98px) {
     .aside-stretch-right {
       background: transparent; }
@@ -9343,7 +9343,7 @@ textarea.form-control {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #fdbe34; }
+    background: #b72827; }
     .testimony-wrap .icon span {
       color: #fff; }
   .testimony-wrap .user-img {
@@ -9422,7 +9422,7 @@ textarea.form-control {
     .blog-entry .text .heading a {
       color: #000000; }
       .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-        color: #fdbe34; }
+        color: #b72827; }
   .blog-entry .text .meta-chat {
     color: #6c757d; }
   .blog-entry .text .read {
@@ -9482,7 +9482,7 @@ textarea.form-control {
       border-radius: 50%;
       border: 1px solid #e6e6e6; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #fdbe34;
+      background: #b72827;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -9506,12 +9506,12 @@ textarea.form-control {
       font-weight: 500;
       color: #000000; }
     .dbox p a {
-      color: #fdbe34; }
+      color: #b72827; }
   .dbox .icon {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: #00043c;
+    background: #6f8ed6;
     margin: 0 auto;
     margin-bottom: 20px; }
     .dbox .icon span {
@@ -9543,8 +9543,8 @@ textarea.form-control {
     -moz-box-shadow: 0px 10px 20px -6px rgba(0, 0, 0, 0.22) !important;
     box-shadow: 0px 10px 20px -6px rgba(0, 0, 0, 0.22) !important; }
   .btn.btn-primary {
-    background: #fdbe34 !important;
-    border-color: #fdbe34 !important;
+    background: #b72827 !important;
+    border-color: #b72827 !important;
     color: #fff; }
     .btn.btn-primary:hover, .btn.btn-primary:focus {
       border-color: #fcad02 !important;
@@ -9584,7 +9584,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #fdbe34; }
+        color: #b72827; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 12px;
@@ -9756,11 +9756,11 @@ textarea.form-control {
       color: #ccc; }
     .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
       outline: none;
-      color: #fdbe34; }
+      color: #b72827; }
   .categories li.active a, .sidelink li.active a {
-    color: #fdbe34; }
+    color: #b72827; }
     .categories li.active a span, .sidelink li.active a span {
-      color: #fdbe34; }
+      color: #b72827; }
 
 #ftco-loader {
   position: fixed;
@@ -9852,3 +9852,7 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+img.logo {
+  max-width: 175px;
+}
